--- a/app/templates/app/signup.html
+++ b/app/templates/app/signup.html
@@ -2,6 +2,6 @@
 <form method="post" autocomplete="off">
   {% csrf_token %} {{ form.as_p }}
 
-  <input type="submit" value="Login" />
+  <input type="submit" value="SignUp" />
 </form>
 {% endblock content %}
