--- a/app/templates/app/userprofile.html
+++ b/app/templates/app/userprofile.html
@@ -1,2 +1,42 @@
-{% extends "app/base.html" %} {% block content %} {{user.username}}
-{{user.email}} {% endblock content %}
+{% extends "app/base.html" %} {% block content %}{% load static %}
+<div class="container mt-5">
+  <h1>Buyer Information</h1>
+  <hr class="my-4" />
+  <div class="row">
+    <div class="col-md-6">
+      <h3>Buyer Details</h3>
+      <ul class="list-group">
+        <li class="list-group-item">Name: {{ buyer.name }}</li>
+        <li class="list-group-item">Email: {{ buyer.email }}</li>
+      </ul>
+    </div>
+    <div class="col-md-6">
+      <h3>Cart Information</h3>
+      {% if buyer.cart.all %}
+      <ul class="list-group">
+        {% for cart in buyer.cart.all %}
+        <li class="list-group-item">Cart ID: {{ cart.id }}</li>
+        {% endfor %}
+      </ul>
+      {% else %}
+      <p class="text-muted">The cart is empty.</p>
+      {% endif %}
+    </div>
+    <div>
+      {% if buyer.profile_pic.url is not None %}
+      <h3>Profile Picture</h3>
+      <img
+        src="{{buyer.profile_pic.url}}"
+        alt="Profile Picture"
+        width="200"
+        height="200"
+      />{% endif %}
+      <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <input type="file" name="profile_pic" accept="image/*" />
+        <input type="submit" name="pic" value="Submit Pic" />
+      </form>
+    </div>
+  </div>
+</div>
+{% endblock %}
