--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -28,7 +28,7 @@
           <p class="card-text">Price: {{ item.price }}</p>
           <p class="card-text">Description: {{ item.description }}</p>
           <p class="card-text">Category: {{ item.category }}</p>
-          <a href="{% url 'viewitem' item.id %}" class="btn btn-primary"
+          <a href="{% url 'testpage' item.id %}" class="btn btn-primary"
             >View</a
           >
 
