--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -47,7 +47,7 @@
            
    
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="{% url "listviewpage" %}">ListViewPage</a>
             </li>
             <li class="nav-item dropdown">
               <a
