--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -19,7 +19,7 @@
   </div>
 
   <div class="row mt-3">
-    {% for item in items %}
+    {% for item in page_obj %}
     <div class="col-md-4">
       <div class="card mb-4">
         <img src="{{ item.image.url }}" class="card-img-top" alt="Image" />
@@ -28,7 +28,7 @@
           <p class="card-text">Price: {{ item.price }}</p>
           <p class="card-text">Description: {{ item.description }}</p>
           <p class="card-text">Category: {{ item.category }}</p>
-          <a href="{% url 'testpage' item.id %}" class="btn btn-primary"
+          <a href="{% url 'viewitem' item.id %}" class="btn btn-primary"
             >View</a
           >
 
@@ -49,6 +49,63 @@
     {% endfor %}
   </div>
   {% endif %}
+</div>
+
+{% for contact in page_obj %} {# Each "contact" is a Contact model object. #}
+<div class="contact">
+  {{ contact.full_name|upper }}<br />
+  <!-- Add more details or styling as needed -->
+</div>
+{% endfor %}
+
+<div class="container mt-4">
+  <nav aria-label="Page navigation">
+    <ul class="pagination justify-content-center">
+      {% if page_obj.has_previous %}
+      <li class="page-item">
+        <a href="?page=1" class="page-link" aria-label="First">
+          <span aria-hidden="true">&laquo;&laquo;</span>
+        </a>
+      </li>
+      <li class="page-item">
+        <a
+          href="?page={{ page_obj.previous_page_number }}"
+          class="page-link"
+          aria-label="Previous"
+        >
+          <span aria-hidden="true">&laquo;</span>
+        </a>
+      </li>
+      {% endif %}
+
+      <li class="page-item disabled">
+        <span class="page-link"
+          >Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages}}</span
+        >
+      </li>
+
+      {% if page_obj.has_next %}
+      <li class="page-item">
+        <a
+          href="?page={{ page_obj.next_page_number }}"
+          class="page-link"
+          aria-label="Next"
+        >
+          <span aria-hidden="true">&raquo;</span>
+        </a>
+      </li>
+      <li class="page-item">
+        <a
+          href="?page={{ page_obj.paginator.num_pages }}"
+          class="page-link"
+          aria-label="Last"
+        >
+          <span aria-hidden="true">&raquo;&raquo;</span>
+        </a>
+      </li>
+      {% endif %}
+    </ul>
+  </nav>
 </div>
 
 {% endblock content %}
